--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
-                            Hello there. I'm Cara.
+                            Hello There!!!. I'm Melanie.
                         </h1>
                         <br>
                     </div>
