--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         #Engineer
                     </div>
                     <div class="description">
-                        I know <span>PHP</span>, Symfony, JS, jQuery, Mongo, MySQL, and a smattering of ObjC/iOS.
-                        I use Git, JIRA, <span>PHPUnit</span>, Xcode, TestFlight, MySQL Workbench, Postman, and VirtualBox.
+                        Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
+                        This is what makes us  <span>UNIQUE.</span>
                     </div>
                 </div>
             </div>
