--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                         #Sci-Fi Lover
                     </div>
                     <div class="description">
-                        On my <span>bookshelf</span>: The Diamond Age, The Years of Rice and Salt, Cryptonomicon, and
-                        The Difference Engine. On my <span>hard drive</span>: Farscape, Firefly, BSG, SG1, and Dr. Who.
+                        What do you think <span>makes you</span>: unique?
                     </div>
                 </div>
             </div>
@@ -76,8 +75,7 @@
                         #Adventurer
                     </div>
                     <div class="description">
-                        Born in <span>South Africa</span>. Raised in America. Schooled in England. Sunburned in Zimbabwe.
-                        In twenty-seven years I've had <span>twenty addresses</span>, but New York City is home.
+                        Cats give me <span>100</span> more years of life.
                     </div>
                 </div>
             </div>
@@ -86,7 +84,7 @@
 
     <section id="quote" class="parallax">
         <p>
-            I can't say I've never eaten fermented shark but I can say this: <span>never again.</span>
+            <span>GEMINI POWER!</span>
         </p>
     </section>
 
