--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <!-- Adventurer -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/adventurer-bw.jpg"/>
-                    <img class="image-color" src="/img/adventurer.jpg"/>
+                    <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg-bw.jpg"/>
+                    <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg"/>
                     <div class="hashtag">
                         #Adventurer
                     </div>
