--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <!-- Adventurer -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg-bw.jpg"/>
+                    <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash-bw.jpg"/>
                     <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg"/>
                     <div class="hashtag">
-                        #karina-vorozheeva-rW-I87aPY5Y-unsplash
+                        #Cats
                     </div>
                     <div class="description">
                         Cats give me <span>100</span> more years of life.
