--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 
             <!-- Adventurer -->
             <div class="bio-item">
-                <div class="content">
-                    <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash-bw.jpg"/>
-                    <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg"/>
+                <div class="content"> 
+                    <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1).jpg"/>
                     <div class="hashtag">
                         #Cats
                     </div>
