--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <!-- Adventurer -->
             <div class="bio-item">
                 <div class="content"> 
+                     <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1)-bw.jpg"/>
                     <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1).jpg"/>
                     <div class="hashtag">
                         #Cats
