--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                      <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1)-bw.jpg"/>
                     <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1).jpg"/>
                     <div class="hashtag">
-                        #Cats
+                        #Karina-Vorozheeva
                     </div>
                     <div class="description">
                         Cats give me <span>100</span> more years of life.
