--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <!-- Adventurer -->
+            <!-- Karina Vorozheeva-->
             <div class="bio-item">
                 <div class="content"> 
                      <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1)-bw.jpg"/>
