--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="bio-item">
                 <div class="content">
                     <img class="image-black-white" src="/img/engineer-bw.jpg"/>
-                    <img class="image-color" src="/img/engineer.jpg"/>
+                    <img class="image-color" src="/img/culture.jpg"/>
                     <div class="hashtag">
                         #Engineer
                     </div>
