--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <!-- Bio -->
     <section id="about" class="parallax">
         <div id="bio">
-            <!-- Developer -->
+            <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/engineer-bw.jpg"/>
+                    <img class="image-black-white" src="/img/culture-bw.jpg"/>
                     <img class="image-color" src="/img/culture.jpg"/>
                     <div class="hashtag">
-                        #Engineer
+                        #Culture
                     </div>
                     <div class="description">
                         Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
@@ -72,7 +72,7 @@
                      <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1)-bw.jpg"/>
                     <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1).jpg"/>
                     <div class="hashtag">
-                        #Karina-Vorozheeva
+                        #Cats
                     </div>
                     <div class="description">
                         Cats give me <span>100</span> more years of life.
