--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 </div>
             </div>
 
-            <!-- Karina Vorozheeva-->
+            <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                     <img class="image-black-white" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1)-bw.jpg"/>
-                    <img class="image-color" src="/img/karina-vorozheeva-rW-I87aPY5Y-unsplash (1).jpg"/>
+                     <img class="image-black-white" src="/img/alex-nicolopoulos-hxn2HjZHyQE-unsplash-bw.jpg"/>
+                    <img class="image-color" src="/img/alex-nicolopoulos-hxn2HjZHyQE-unsplash.jpg"/>
                     <div class="hashtag">
                         #Cats
                     </div>
