--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img class="image-black-white" src="/img/sci-fi-bw.jpg"/>
                     <img class="image-color" src="/img/sci-fi.jpg"/>
                     <div class="hashtag">
-                        #Sci-Fi Lover
+                        #Unique
                     </div>
                     <div class="description">
                         What do you think <span>makes you</span>: unique?
