--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                     <img class="image-black-white" src="/img/alex-nicolopoulos-hxn2HjZHyQE-unsplash-bw.jpg"/>
-                    <img class="image-color" src="/img/alex-nicolopoulos-hxn2HjZHyQE-unsplash.jpg"/>
-                    <img src="/img/cats.jpg"/>
+                    <img class src="/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                     </div>
