--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class src="/img/cats.jpg"/>
+                    <img src="/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                     </div>
