--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img src="/img/cats.jpg"/>
+                    <img src="/img/https://www.aspca.org/pet-care/cat-care/common-cat-behavior-issues/urine-marking-cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                     </div>
