--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/adventurer-bw.jpg"/>
+                    <img class="image-black-white" src="Trying/img/culture-bw.jpg"/>
                     <img class="image-color" src="/img/adventurer.jpg"/>
                     <div class="hashtag">
                         #Culture
@@ -69,8 +69,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class="image-black-white" src="Trying/img/cats-bw.jpg"/> 
-                    <img class="image-color" src="Trying/img/cats.jpg"/>
+                    <img class= "image-color" src="Trying/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                     </div>
