--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="Trying/img/culture-bw.jpg"/>
-                    <img class="image-color" src="/img/adventurer.jpg"/>
+                    <img class= "image-black-white" src="Trying/img/culture-bw.jpg"/>
+                    <img class= "image-color" src="Trying/img/culture.jpg"/>
                     <div class="hashtag">
                         #Culture
                     </div>
