--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class="image-black-white" src="Trying/img/culture-bw.jpg"/>
+                    <img class="image-black-white" src="Trying/img/culture-bw.jpg">
                     <div class="hashtag">
                         #Cats 
                     </div>
