--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-color"  src="Trying/img/culture.jpg"/>
+                    <img class="image-black-white" src="Trying/img/culture-bw.jpg"/>
+                    <img class="image-color" src="Trying/img/culture.jpg"/>
                     <div class="hashtag">
                         #Culture
                     </div>
@@ -51,11 +52,11 @@
                 </div>
             </div>
 
-            <!-- Sci Fi Lover -->
+            <!-- Unique -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/sci-fi-bw.jpg"/>
-                    <img class="image-color" src="/img/sci-fi.jpg"/>
+                    <img class="image-black-white" src="Trying/img/adventurer-bw.jpg"/>
+                    <img class="image-color" src="Trying/img/adventurer.jpg"/>
                     <div class="hashtag">
                         #Unique
                     </div>
@@ -68,7 +69,8 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class="image" src="Trying/img/cats.jpg"/>
+                    <img class="image-black-white" src="Trying/img/cats-bw.jpg"/>
+                    <img class="image-color" src="Trying/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                     </div>
