--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class="image-black-white" src="Trying/img/cats-bw.jpg"/>
+                    <img class="image-black-white" src="/img/cats-bw.jpg"/>
                     <div class="hashtag">
                         #Cats 
                         
