--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="Trying/img/culture-bw.jpg"/>
+                    <img class="image-color" src=url('../img/culture.jpg')
                     <div class="hashtag">
                         #Culture
                     </div>
