--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-color" src=url('../img/culture.jpg')
+                    <img class="image-color" src="Trying/img/culture.jpg"/>
                     <div class="hashtag">
                         #Culture
                     </div>
@@ -54,8 +54,8 @@
             <!-- Unique -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="Trying/img/adventurer-bw.jpg"/>
-                    <img class="image-color" src="Trying/img/adventurer.jpg"/>
+                    <img class="image-black-white" src="/img/adventurer-bw.jpg"/>
+                    <img class="image-color" src="/img/adventurer.jpg"/>
                     <div class="hashtag">
                         #Unique
                     </div>
