--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-color" src="Trying/img/culture.jpg"/>
+                    <img  src="Trying/img/culture.jpg"/>
                     <div class="hashtag">
                         #Culture
                     </div>
@@ -68,7 +68,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img class="image-black-white" src="/img/cats-bw.jpg"/>
+                    <img src="/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                         
