--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img src="/img/cats.jpg"/>
+                    <img src="Trying/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                         
