--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img  src="Trying/img/culture.jpg"/>
+                    <img  src=url('../img/culture.jpg'/)>
                     <div class="hashtag">
                         #Culture
                     </div>
