--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <!-- Unique -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/img/adventurer-bw.jpg"/>
-                    <img class="image-color" src="/img/adventurer.jpg"/>
+                    <img class="image-black-white" src="/Trying/img/unique-bw.jpg"/>
+                    <img class="image-color" src="/Trying/img/unique.jpg"/>
                     <div class="hashtag">
                         #Unique
                     </div>
@@ -68,7 +68,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img src="Trying/img/cats.jpg"/>
+                    <img src="/Trying/img/cats.jpg"/>
                     <div class="hashtag">
                         #Cats 
                         
