--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-color"  src="/Trying/img/culture.jpg"/>
+                    <img src="/Trying/img/cultura.gif"/>
                     <div class="hashtag">
                         #Culture
                     </div>
