--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img src="/Trying/img/cultura.gif"/>
+                    <img src="/Trying/img/cultura.gif"/ width="300" height="150">
                     <div class="hashtag">
                         #Culture
                     </div>
