--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
-                    <img src="/Trying/img/cultura.gif"/>
+                    <img src="/Trying/img/cultura.gif"style="height: 400px; width: 300px;"/>
                     <div class="hashtag">
                         #Culture
                     </div>
@@ -54,8 +54,8 @@
             <!-- Unique -->
             <div class="bio-item">
                 <div class="content">
-                    <img class="image-black-white" src="/Trying/img/unique-bw.jpg"/>
-                    <img class="image-color" src="/Trying/img/unique.jpg"/>
+                    <img class="image-black-white" src="/Trying/img/unique-bw.jpg"style="height: 400px; width: 300px;"/>
+                    <img class="image-color" src="/Trying/img/unique.jpg"style="height: 400px; width: 300px;"/>
                     <div class="hashtag">
                         #Unique
                     </div>
@@ -68,7 +68,7 @@
             <!-- Cats-->
             <div class="bio-item">
                 <div class="content"> 
-                    <img src="/Trying/img/cats.jpg"/>
+                    <img src="/Trying/img/cats.jpg"style="height: 400px; width: 300px;"/>
                     <div class="hashtag">
                         #Cats 
                         
