--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 </div>
             </div>
 
-        </div>
-    </section>
+        </div class="site__main"> 
+        @function makelongshadow($color: #252526);
+        Discover
+    </section> 
 
     <!-- Bio -->
     <section id="about" class="parallax">
