--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                 </div>
             </div>
 
+        </div>
+    </section id=about" class=parallax'> 
         </div class="site__main"> 
+             <dic class=header-description">
               Discover
-    </section> 
 
     <!-- Bio -->
     <section id="about" class="parallax">
