--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             </div>
 
         </div>
-    </section id=about" class=parallax'> 
-        </div class="site__main"> 
-             <dic class=header-description">
-              Discover
+    </section>
 
     <!-- Bio -->
     <section id="about" class="parallax">
         <div id="bio">
+            <!-- Header -->
+            <div class="description'>
+                        "Discover"
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
