--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <section id="about" class="parallax">
         <div id="bio">
             <!-- Header -->
+            <div class="bio-header">
             <div class="description'>
                         "Discover"
             <!-- Culture -->
