--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     
     <section id="quote" class="parallax">
         <p>
-            <span>GEMINI POWER!</span>
+            <span style="animation-direction: reverse;>
+                         <span>GEMINI POWER!</span>
         </p>
     </section>
 
