--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="hashtag">
                         #Culture
                     </div>
-                    <div class="description">
+                    <div class="description" style="animation-direction: alternate-reverse; color: lightskyblue; height: 60px;>
                         Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
                         This is what makes us  <span>UNIQUE.</span>
                     </div>
