--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="description">
                         Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
-                        This is what makes us  <span>UNIQUE.</span>
+                        This is what makes us  <span>UNIQUE. "style=height: 18px</span> 
                     </div>
                 </div>
             </div>
