--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div class="hashtag">
                         #Culture
                     </div>
-                    <div class="description">
+                    <div class="description" "style="height: 18px>
                         Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
-                        This is what makes us  <span>UNIQUE. "style=height: 18px</span> 
+                        This is what makes us  <span>UNIQUE.</span> 
                     </div>
                 </div>
             </div>
