--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="hashtag">
                         #Culture
                     </div>
-                    <div class="description" "style="height: 18px>
+                    <div class="description">
                         Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
                         This is what makes us  <span>UNIQUE.</span> 
                     </div>
