--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     
-    <section id="quote" class="parallax">
+    <section id="quote" class="parallax" animation-delay: inherit;>
         <p>
             <span>GEMINI POWER!</span>
         </p>
