--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
-                        <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both; border: lightskyblue;">
+                        <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
                             Hello There!!!. I'm Melanie.
                         </h1>
                         <br>
@@ -33,6 +33,9 @@
 
         </div>
     </section>
+    <section>
+        <div style=display flex;">
+                                 <div style="background-color:lilac">Go explore</div>
 
     <!-- Bio -->
     <section id="about" class="parallax">
