--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section>
         <div style=display flex;">
-                                 <div style="background-color:lilac">Go explore</div>
+             <div style="aspect-ratio; .5;backgroung-color: lilac; height: 100px; margin: 10px;">Tall green</div>
 
     <!-- Bio -->
     <section id="about" class="parallax">
