--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
     
     <section id="quote" class="parallax">
-        <p>
+        <<h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
+         <p>                
             <span>GEMINI POWER!</span>
         </p>
     </section>
