--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     
     <section id="quote" class="parallax">
-        <<h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
+        <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
          <p>                
             <span>GEMINI POWER!</span>
         </p>
