--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 
     <section id="footer">
         <div class="left half">
-            
-            <div>
-                 <div>
-                      <div>
+           
+            <div style="background: chocolate; padding: 10px;"> 
+                 <div style="font-weight: 700;background-color: azure;color: navy;padding: 20px;font-size: 14px;">
                           Email me: <a href="mailto:warnercara@gmail.com">warnercara@gmail.com</a></br>
                           Find me on Git: <a href="http://github.com/carawarner">github.com/carawarner</a>
                      </div>
