--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;">    
-                            Hello There!!!. I'm Melanie.
+                            Hello There!!!. I'm Melanie.<3
                         </h1>
                         <br>
                     </div>
@@ -46,7 +46,7 @@
                         #Culture
                     </div>
                     <div class="description">
-                        Everyone has <span>DIFFERENT</span>, cultures, beliefs, and values.
+                        Everyone has <span>DIFFERENT</span>, cultures and beliefs.
                     </div>
                 </div>
             </div>
