--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
-                            <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;">    
+                            <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">    
                             Hello There!!!. I'm Melanie.<3
                         </h1>
                         <br>
