--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
               <div style="background-color: #CBF3F0;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;"> 
             <span>GEMINI POWER!</span>
         </p>
+        
+        <div  style="background-image: /Trying/img/butterfly.jpg;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;">>
          Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on instagram</a></br>
     </section>
 
