--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <span>GEMINI POWER!</span>
         </p>
         
-        <div  style="background-image: /Trying/img/butterfly.jpg;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;">>
+        <div  style="background-image: /Trying/img/butterfly.jpg;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;">
          Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on instagram</a></br>
     </section>
 
