--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
             <span>GEMINI POWER!</span>
         </p>
         
-        <div  style="background-image: /Trying/img/butterfly.jpg;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;">
+        <div>
+            <div>
          Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on instagram</a></br>
+            </div>
+        </div>
+        
     </section>
 
     <section id="footer">
