--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <span>GEMINI POWER!</span>
         </p>
 
+        <p>
+            Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
+        </p>
         
                 
     </section>
