--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="center">
                 
                 
-            <div style="background: chocolate; padding: 10px;"> 
-                 <div style="font-weight: 700;background-color: azure;color: navy;padding: 20px;font-size: 14px;">
+            <div> 
+                 <div>
                          Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
                    </div>
                </div>
