--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                 
                 
             <div> 
+                <h1 class="ml3">Great Thinkers</h1>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
                  <div>
                          Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
                    </div>
