--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                 
             <div> 
                  <div>
-                         Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
+                     <marquee behavior="scroll" direction="down">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
+
+                        Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
                    </div>
                </div>
             </div>
