--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
                 <div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
-                            <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">    
+                            <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
+                                <h1 class="ml6">
+                                   <span class="text-wrapper">
+                                     <span class="letters"> Holis Bolis. I'm Melanie &#128153;</span>
+                                   </span>
+                                </h1>
+
+                               <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
                             Holis Bolis. I'm Melanie &#128153;
                         </h1>
                         <br>
