--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    .moving-letters {
+       position: absolute;
+       top: 0;
+       right: 0;
+       left: 0;
+       bottom: 0;
+       margin: auto;
+       height: 200px;
+  }
+  </style>
+</head>
+<body>
+  <div class="moving-letters">
+    <h1 class="ml12">A new production</h1>
 
     <!-- Welcome Message -->
     <section id="hello" class="parallax">
@@ -25,13 +39,6 @@
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
-                                <h1 class="ml6">
-                                   <span class="text-wrapper">
-                                     <span class="letters"> Holis Bolis. I'm Melanie &#128153;</span>
-                                   </span>
-                                </h1>
-
-                               <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
                             Holis Bolis. I'm Melanie &#128153;
                         </h1>
                         <br>
