--- a/index.html
+++ b/index.html
@@ -11,21 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    .moving-letters {
-       position: absolute;
-       top: 0;
-       right: 0;
-       left: 0;
-       bottom: 0;
-       margin: auto;
-       height: 200px;
-  }
-  </style>
-</head>
-<body>
-  <div class="moving-letters">
-    <h1 class="ml12">A new production</h1>
-
+   
     <!-- Welcome Message -->
     <section id="hello" class="parallax">
         <div class="background"
@@ -112,7 +98,7 @@
                 
             <div> 
                  <div>
-                     <marquee behavior="scroll" direction="down">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
+                     <marquee behavior="alternative" direction="down">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
                    </div>
                </div>
             </div>
