--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 
             <div> 
                  <div>
-                     <marquee behavior="alternative" direction="down">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
+                   <marquee behavior="alternate">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
                    </div>
                </div>
             </div>
