--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section id="quote" class="parallax">
          <p>   
               <div style="background-color: #CBF3F0;padding: 20px;text-decoration-style: wavy;animation-name: text-flicker-in-glow;"> 
-            <span>GEMINI POWER!</span>
+              <marquee behavior="alternate"><span>GEMINI POWER!</span></marquee>
         </p>
         
         <p> 
@@ -98,7 +98,7 @@
                 
             <div> 
                  <div>
-                   <marquee behavior="alternate">Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br></marquee>
+                    Follow your dreams <a href="https://www.instagram.com/melanie.toris/">and follow me on Instagram</a></br>
                    </div>
                </div>
             </div>
