--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <!-- Bio -->
     <section id="about" class="parallax">
         <div id="bio">
+         
+      <marquee behavior="scroll" direction="left"><img src="/v id="bio">/Trying/img/mariposa.gif" width="94" height="88" alt="Swimming fish" /></marquee>
+
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
