--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section id="about" class="parallax">
         <div id="bio">
          
-      <marquee behavior="scroll" direction="left"><img src="/v id="bio">/Trying/img/mariposa.gif" width="94" height="88" alt="Swimming fish" /></marquee>
-
+      <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposa.gif" width="94" height="88" alt="Mariposa flying" /></marquee>
+     
             <!-- Culture -->
             <div class="bio-item">
                 <div class="content">
