--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             <div class="container">
                 <div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
-                        <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;">
+                        <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;"> 
+                            <div id="wrapper">
+                               <div id="container">
+                                   
+                                   <h1>Holis Bolis. I'm Melanie &#128153;
+                          </h1>
+                                   
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
                             Holis Bolis. I'm Melanie &#128153;
                         </h1>
