--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;"> 
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
+                                <div class="textcontainer">
+   <span class="particletext bubbles">Holis Bolis. I'm Melanie &#128153;</span>
+</div>
                             Holis Bolis. I'm Melanie &#128153;
                         </h1>
                         <br>
