--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
              data-anchor-target="#hello">
 
             <div class="dark-overlay"></div>
-            <div class="container">
-                <div class="content">
+            <div class="textcontainer">
+                <div class="particletext bubbles">Holis Bolis. I'm Melanie &#128153;</span>
+            </div>
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;"> 
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
-                                <div class="textcontainer">
-   <span class="particletext bubbles">Holis Bolis. I'm Melanie &#128153;</span>
-</div>
                             Holis Bolis. I'm Melanie &#128153;
                         </h1>
                         <br>
