--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
             <div class="dark-overlay"></div>
             <div class="textcontainer">
+                <span class="particletext bubbles">Bubbles</span>
+</div>
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;"> 
                             <div  style="border-width: 10px; border-color: lightsalmon;border-style: double;padding: 10px;font-family: cursive;">   
-                            <div class="particletext bubbles">Holis Bolis. I'm Melanie &#128153;</span>
+                              Holis Bolis. I'm Melanie &#128153;
                         </h1>
                         <br>
                     </div>
