--- a/index.html
+++ b/index.html
@@ -137,4 +137,4 @@
     <script src="js/skrollr.js"></script>
     <script src="js/main.js"></script>
 </body> 
-<div class="uk-tile uk-width-1-1 uk-background-norepeat uk-background-cover uk-background-center-center" data-src="/templates/yootheme/cache/animacio-category-small-2e095d70.webp" data-srcset="/templates/yootheme/cache/animacio-category-small-28b8e235.webp 768w, /templates/yootheme/cache/animacio-category-small-a19a2ca6.webp 849w, /templates/yootheme/cache/animacio-category-small-2e095d70.webp 850w" data-sizes="(max-aspect-ratio: 850/444) 191vh" uk-img="" style="background-image: url(&quot;https://www.intuix.cat/templates/yootheme/cache/animacio-category-small-2e095d70.webp&quot;);"> </div>
+background-image: url(https://www.intuix.cat/templates/yootheme/cache/animacio-category-small-2e095d70.webp);
