--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="left half">
             
                    
-            <div style="background-image: url(https://www.intuix.cat/templates/yootheme/cache/animacio-category-small-2e095d70.webp); padding: 10px;"> 
+            <div style="background: chocolate; padding: 10px;"> 
                  <div style="font-weight: 700;background-color: azure;color: navy;padding: 20px;font-size: 14px;">
                           Email me: <a href="mailto:warnercara@gmail.com">warnercara@gmail.com</a></br>
                           Find me on Git: <a href="http://github.com/carawarner">github.com/carawarner</a>
