--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             </div>
         
         <body>
-            <video https://www.youtube.com/watch?v=ocg8s6iRDuw&vl=en>
+            <video src="https://www.youtube.com/watch?v=ocg8s6iRDuw&vl=en">
+                <em>Video no supported</em>
             </video>
         </body>
         
