--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                </div>
             </div>
         
-        <body>
+        <div id="media">
             <video src="https://www.youtube.com/watch?v=ocg8s6iRDuw&vl=en">
                 <em>Video no supported</em>
             </video>
