--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
                     </div>
                 </div>
             </div>
-
+        <div id="Instructions">
+            <div style="font-family: monospace;">
+            <h1><emThere are only two rules here</em></h1>
+            <ul>
+                <li><em>Be enough for yourself first, the rest of the worl can wait</em></li>
+                <li><em>Never regret anything that made you smile</em></li>
+                </ul>
+            </div>
         </div>
     </section>
 
