--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Bio -->
     <section id="about" class="parallax">
         <div id="bio">
-            
+         <div id="There are"   
           <h2>There are only two rules here</h2>  
               <p>
             <ol>
@@ -47,6 +47,7 @@
                 <li>Never regret anything that made you smile</li>
               </ol> 
             </p>
+         </div>
       <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
      
             <!-- Culture -->
