--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
     <!-- Bio -->
     <section id="about" class="parallax">
         <div id="bio">
-         <h1>There are only two rules here</h1>  
+            
+        <div id="here are only two rules here">
+          <h1>There are only two rules here</h1>  
             <ol>
                 <li>Be enough for yourself first, the rest of the worl can wait</li>
                 <li>Never regret anything that made you smile</li>
              </ol> 
+            </div>
       <marquee behavior="scroll" direction="left"><img src="/Trying/img/mariposaa.gif" width="400" height="238" alt="Mariposa flying" /></marquee>
      
             <!-- Culture -->
