--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
     </section>
 
 <div>
-    be enough
-  </div>
-
-<div>
-     hbjb
+    <em>Be enough for yourself firts, the rest of the world can wait</em>
   </div>
 
 
