--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
      
         </div>
     </section>
-
 <div>
-    <em>Be enough for yourself firts, the rest of the world can wait</em>
+  <div style="animation: text-flicker-in-glow 1s linear 0s 5 normal both; text-align: center; font-family: monospace; padding: 40px;  font-size: 23px; color:BDB2FF;">
+    <em>Be enough for yourself first, the rest of the world can wait</em>
   </div>
 
 
