--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </section>
 <div>
-  <div style="animation: text-flicker-in-glow 1s linear 0s 5 normal both; text-align: center; font-family: monospace; padding: 40px;  font-size: 23px; color:#BDB2FF;">
+  <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 23px; color:#BDB2FF;">
     <em>Be enough for yourself first, the rest of the world can wait</em>
   </div>
 
