--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
             <div class="dark-overlay"></div>
             <div class="container">
+                
               </div class="content">
                     <div data-50="opacity: 1" data-350="opacity: 0">
                         <h1 class="anim-object active" style="animation: text-flicker-in-glow 1s linear 0s 1 normal both;"> 
@@ -34,10 +35,17 @@
      
         </div>
     </section>
-<div>
-  <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 23px; color:#BDB2FF;">
-    <em>Be enough for yourself first, the rest of the world can wait</em>
-  </div>
+
+<div class="container">
+    <div style="text-align: center; font-family: monospace; padding: 60px;  font-size: 33px; color:#BDB2FF;">
+	  <p>Be enough for yourself first,</p>
+			    <ul>
+      <li>for yourself first</li>
+      <li>the rest of the world</li>
+				      <li>can wait</li>
+			    </ul>
+		</div>
+
 
 
 
